fix: arruma alguns detalhes no código para se adequar ao padrão mais novo da versão 25 do java.